# LyonParallel

./: .gitignore  LICENSE  LyonParallel.opam  README.md  dune-project
_build/: .db  .digest-db  log
_build/default/: Icgt25.dune-package  Icgt25.install  README.md
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/423b3c0918a91461d11b9cd1259aca91/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/lib/: Icgt25.cma  Icgt25.cmxa  Icgt25.cmxs  aux_functions.ml  aux_functions.pp.ml  category.pp.ml  concretGraphRewritingSystems.ml  concretGraphRewritingSystems.pp.ml  experiences_complexGraph.pp.ml  graphHomoFromTo.pp.ml  graphHomomorphism.pp.ml  graphRelabelingSystem.ml  graphRelabelingSystem.pp.ml  graphRewritingSystem.pp.ml  icgt25.ml-gen  mGraph.pp.ml  my_unix.ml  my_unix.pp.ml  parallel.ml  parallel.pp.ml  semiring.pp.ml  termination.pp.ml  tropical.pp.ml  typeGraph.pp.ml  unlabelledDirectedMultGraph.ml  unlabelledDirectedMultGraph.pp.ml  z3_aux.pp.ml
_build/default/lib/.Icgt25.objs/: icgt25__Aux_functions.impl.d  icgt25__Category.impl.d  icgt25__ConcretGraphRewritingSystems.impl.all-deps  icgt25__ConcretGraphRewritingSystems.impl.d  icgt25__Experiences_complexGraph.impl.d  icgt25__GraphHomoFromTo.impl.all-deps  icgt25__GraphHomoFromTo.impl.d  icgt25__GraphHomomorphism.impl.all-deps  icgt25__GraphHomomorphism.impl.d  icgt25__GraphRelabelingSystem.impl.all-deps  icgt25__GraphRelabelingSystem.impl.d  icgt25__GraphRewritingSystem.impl.all-deps  icgt25__GraphRewritingSystem.impl.d  icgt25__MGraph.impl.all-deps  icgt25__MGraph.impl.d  icgt25__My_unix.impl.all-deps  icgt25__My_unix.impl.d  icgt25__Parallel.impl.all-deps  icgt25__Parallel.impl.d  icgt25__Semiring.impl.d  icgt25__Termination.impl.all-deps  icgt25__Termination.impl.d  icgt25__Tropical.impl.d  icgt25__TypeGraph.impl.all-deps  icgt25__TypeGraph.impl.d  icgt25__UnlabelledDirectedMultGraph.impl.d  icgt25__Z3_aux.impl.d
_build/default/lib/.Icgt25.objs/byte/: icgt25.cmi  icgt25.cmo  icgt25.cmt  icgt25__Aux_functions.cmi  icgt25__Aux_functions.cmo  icgt25__Aux_functions.cmt  icgt25__Category.cmi  icgt25__Category.cmo  icgt25__Category.cmt  icgt25__ConcretGraphRewritingSystems.cmi  icgt25__ConcretGraphRewritingSystems.cmo  icgt25__ConcretGraphRewritingSystems.cmt  icgt25__Experiences_complexGraph.cmi  icgt25__Experiences_complexGraph.cmo  icgt25__Experiences_complexGraph.cmt  icgt25__GraphHomoFromTo.cmi  icgt25__GraphHomoFromTo.cmo  icgt25__GraphHomoFromTo.cmt  icgt25__GraphHomomorphism.cmi  icgt25__GraphHomomorphism.cmo  icgt25__GraphHomomorphism.cmt  icgt25__GraphRelabelingSystem.cmi  icgt25__GraphRelabelingSystem.cmo  icgt25__GraphRelabelingSystem.cmt  icgt25__GraphRewritingSystem.cmi  icgt25__GraphRewritingSystem.cmo  icgt25__GraphRewritingSystem.cmt  icgt25__MGraph.cmi  icgt25__MGraph.cmo  icgt25__MGraph.cmt  icgt25__My_unix.cmi  icgt25__My_unix.cmo  icgt25__My_unix.cmt  icgt25__Parallel.cmi  icgt25__Parallel.cmo  icgt25__Parallel.cmt  (+18 more)
_build/default/lib/.merlin-conf/: lib-Icgt25
lib/: aux_functions.ml  category_Graph.ml  concretGraphRewritingSystems.ml  dune  experiences_complexGraph.ml  graphHomoFromTo.ml  graphHomomorphism.ml  graphRewritingSystem.ml  interp.py  mGraph.ml  mGraph_ext.ml  parallel.ml  ruler_graph.ml  semiring.ml  subgraph_counting_forbidden_contexts.ml  subgraph_counting_forbidden_contexts_multipleForbiddenContexts.ml  termination.ml  tropical.ml  typeGraph.ml  typeGraph_no_bound.ml  unlabelledDirectedMultGraph.ml  z3_aux.ml
(+21 files in other folders)
